--- a/index.css
+++ b/index.css
@@ -66,18 +66,20 @@ footer{
     margin-top: -1.25rem;
 }
 
-#bg-image {
-    padding-top: 0px;
-    background: url(welcome.jpg);
+.bg-image {
+    padding: 0;
+    margin: 0;
+    /*background: url(welcome.jpg);*/
     background-size: relative;
     background-repeat: no-repeat;
-    min-height: 500px;
+    height: 100%;
+    width: 200%;
     background-size: cover;
     background-repeat: no-repeat!important;
     background-position: auto !important;
     background-color: #000;
     vertical-align: middle;
-    position: relative;
+    position: static;
 }
 
 #bg-image .front-bg {
